refactor: guard access point filtering against null list entries
Refs: AM-7443