@@ -40,6 +40,7 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.mock.env.MockEnvironment;
 
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.TimeUnit;
@@ -346,7 +347,8 @@ class EnvironmentCommandHandlerTest {
                 .organizationId("orga#1")
                 .description("Environment description")
                 .name("Environment name")
-                .accessPoints(List.of(accessPoints))
+                // Arrays.asList, not List.of: one case deliberately passes a null entry.
+                .accessPoints(Arrays.asList(accessPoints))
                 .build());
     }
 
@@ -360,9 +362,9 @@ class EnvironmentCommandHandlerTest {
     }
 
     /**
-     * A host-less GATEWAY access point yields url "https://null" and a null name, and that nameless
-     * entrypoint then breaks the organization-wide entrypoint listing. Cockpit is told the command
-     * failed rather than left believing the gateway URL was provisioned.
+     * Rejecting here is what stops a host-less access point becoming an entrypoint with url
+     * "https://null" and no name, which used to break the organization-wide entrypoint listing.
+     * Cockpit is told the command failed rather than left believing the gateway URL was provisioned.
      */
     @Test
     void handleCloudMode_nullHostAccessPoint_isRejected() {
@@ -394,6 +396,25 @@ class EnvironmentCommandHandlerTest {
         assertRejectedForMissingHost(commandWithAccessPoints(
                 AccessPoint.builder().target(AccessPoint.Target.GATEWAY).host("domain.restriction1.io").build(),
                 AccessPoint.builder().target(AccessPoint.Target.GATEWAY).host(null).build()));
+    }
+
+    @Test
+    void handleCloudMode_nullAccessPointEntry_repliesWithoutThrowing() {
+        enableCloudMode();
+
+        // The guard runs before the reactive chain is built, so a null entry would escape handle() as a
+        // synchronous throw rather than reaching onErrorReturn.
+        EnvironmentCommand command = commandWithAccessPoints(new AccessPoint[]{null});
+
+        when(environmentService.createOrUpdate(eq("orga#1"), eq("env#1"), any(NewEnvironment.class), isNull())).thenReturn(Single.just(new Environment()));
+        when(entrypointService.findByEnvironment("orga#1", "env#1")).thenReturn(Flowable.empty());
+
+        TestObserver<EnvironmentReply> obs = cut.handle(command).test();
+
+        obs.awaitDone(10, TimeUnit.SECONDS);
+        obs.assertNoErrors();
+        obs.assertValue(reply -> reply.getCommandId().equals(command.getId()));
+        verify(entrypointService, never()).create(any(), any(NewEntrypoint.class), anyBoolean(), any());
     }
 
     @Test
